--- a/.github/workflows/msbuild-release.yml
+++ b/.github/workflows/msbuild-release.yml
@@ -46,7 +46,7 @@ jobs:
         prerelease: false
         
     - name: Upload x64 Release Asset
-      id: upload-release-asset
+      id: upload-x64-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -57,7 +57,7 @@ jobs:
         asset_content_type: application/zip
         
     - name: Upload x86 Release Asset
-      id: upload-release-asset
+      id: upload-x86-release-asset
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
